--- a/src/Styles/_landing.scss
+++ b/src/Styles/_landing.scss
@@ -21,12 +21,16 @@
 
 .greenDiv {
     background-color: #87BA77;
+    border-radius: 10px;
+    box-shadow: #517048 1px 1px 3px 3px;
     min-width: 15rem;
     min-height: 20rem;
 }
 
 .midDiv {
     background-color: #dec8b788;
+    border-radius: 10px;
+    box-shadow: #7a6f6588 1px 1px 3px 3px;
     min-width: 15rem;
     min-height: 20rem;
 }
