--- a/src/Styles/_landing.scss
+++ b/src/Styles/_landing.scss
@@ -46,3 +46,14 @@
 h4 {
     color: #171E20;
 }
+
+.editActivity {
+    margin: auto;
+    width: 3rem;
+    height: 2rem;
+}
+
+.date {
+    margin-right: 20px;
+    margin-left: 1rem;
+}
