Changed design on login and signup view

--- a/src/Styles/_app.scss
+++ b/src/Styles/_app.scss
@@ -1,23 +1,25 @@
-.App {
-  text-align: center;
-  background-color: #F7E6D3;
-  min-height: 100vh;
-  padding-bottom: 1rem;
-}
+@import "./typography";
+@import "./colors";
+@import "./buttons";
 
-.App-logo {
-  height: 20vmin;
-  margin: 1rem;
-  margin-bottom: -3rem;
-  pointer-events: none;
-}
-
-
-.App-header {
+.app {
+  background-color: $background;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  border-bottom: solid 3px #0C5843;
+
+  &__header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-bottom: solid 3px $dark-green;
+    margin-bottom: 16px;
+  }
+  &__logo {
+    height: 20vmin;
+    margin: 1rem;
+    margin-bottom: -3rem;
+    pointer-events: none;
+  }
 }
-
-
