--- a/src/Styles/_app.scss
+++ b/src/Styles/_app.scss
@@ -5,7 +5,8 @@
 .app {
   background-color: $background;
   width: 100%;
-  height: 100%;
+  min-height: 100vh !important;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 
