--- a/src/Styles/_buttons.scss
+++ b/src/Styles/_buttons.scss
@@ -1,6 +1,6 @@
 @import "./colors";
 
-.login-btn, .create-btn, .forgot-btn {
+.login-btn, .create-btn, .forgot-btn, .go-back-btn {
     appearance: none;
     text-align: center;
     cursor: pointer;
@@ -13,11 +13,19 @@
     font-family: 'Saira', sans-serif;
     outline: none;
     text-decoration: none;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     &:hover {
         background-color: lighten($dark-green, 8%);
         color: $white;
         box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-        transform: translateY(-2px);
+    }
+    &:disabled {
+        cursor: auto;
+        background: #dddddd;
+        color: $text-color;
+        &:hover {
+            color: $text-color;
+        }
     }
 }
 
@@ -28,6 +36,7 @@
 
 .google-btn, .facebook-btn {
     margin: 0;
+    cursor: pointer;
     background-color: $background;
     border: none;
     width: 50px;
