--- a/src/Styles/_toggle-info.scss
+++ b/src/Styles/_toggle-info.scss
@@ -3,10 +3,12 @@
 @import "./breakpoints";
 
 .toggle-info {
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
+    bottom: 0;
+    right: 0;
     &__info-img {
         width: 50px;
         height: 50px;
