--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Saira");
 
+* { 
+  padding: 0; 
+  margin: 0; 
+}
+
 body, html {
   margin: 0;
   padding: 0;
+  position: absolute;
+  width: 100%;
   height: 100%;
   font-family: "Saira", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  width: 100%;
-  height: 100%;
 }
 
 code {
