--- a/src/Styles/_app.scss
+++ b/src/Styles/_app.scss
@@ -19,6 +19,7 @@
   }
   &__logo {
     height: 20vmin;
+    width: 20vmin;
     margin: 1rem;
     margin-bottom: -3rem;
     pointer-events: none;
