--- a/src/Styles/_not-found.scss
+++ b/src/Styles/_not-found.scss
@@ -1,7 +1,7 @@
 @import "./colors";
 @import "./breakpoints";
 
-.error-url {
+.not-found {
     height: 100%;
     margin: 0 auto;
     display: flex;
