--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Saira");
-
 * { 
   padding: 0; 
   margin: 0; 
@@ -11,11 +9,12 @@ body, html {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+@font-face {
   font-family: "Saira", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: "Saira", sans-serif;
+  font-display: swap;
+  src: url("https://fonts.googleapis.com/css2?family=Saira");
 }
