--- a/src/Styles/_app.scss
+++ b/src/Styles/_app.scss
@@ -1,6 +1,7 @@
 @import "./typography";
 @import "./colors";
 @import "./buttons";
+@import "./breakpoints";
 
 .app {
   background-color: $background;
@@ -12,10 +13,13 @@
 
   &__header {
     display: flex;
-    flex-direction: column;
     align-items: flex-start;
     border-bottom: solid 3px $dark-green;
     margin-bottom: 80px;
+    
+    @include breakpoint("xs", "down") { 
+      height: 80px;
+    }
   }
   &__logo {
     height: 20vmin;
