Added a confirm deletion component

--- a/src/Components/ToggleInfo/_toggle-info.scss
+++ b/src/Components/ToggleInfo/_toggle-info.scss
@@ -1,6 +1,6 @@
-@import "./colors";
-@import "./keyframes";
-@import "./breakpoints";
+@import "../../Styles/colors";
+@import "../../Styles/keyframes";
+@import "../../Styles/breakpoints";
 
 .toggle-info {
     position: absolute;
