--- a/src/Components/NavBar/_nav.scss
+++ b/src/Components/NavBar/_nav.scss
@@ -1,7 +1,7 @@
-@import "./typography";
-@import "./colors";
-@import "./breakpoints";
-@import "./keyframes";
+@import "../../Styles/typography";
+@import "../../Styles/colors";
+@import "../../Styles/breakpoints";
+@import "../../Styles/keyframes";
 
 .nav-bar {
   display: flex;
