--- a/src/Styles/_app.scss
+++ b/src/Styles/_app.scss
@@ -7,7 +7,6 @@
   background-color: $background;
   width: 100%;
   min-height: 100vh !important;
-  height: 100vh;
   display: flex;
   flex-direction: column;
 
@@ -15,7 +14,8 @@
     display: flex;
     align-items: flex-start;
     border-bottom: solid 3px $dark-green;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
+    height: 100px;
     
     @include breakpoint("xs", "down") { 
       height: 80px;
