--- a/src/views/404/_not-found.scss
+++ b/src/views/404/_not-found.scss
@@ -1,5 +1,5 @@
-@import "./colors";
-@import "./breakpoints";
+@import "../../Styles/colors";
+@import "../../Styles/breakpoints";
 
 .not-found {
     height: 100%;
