--- a/src/views/Auth/_auth.scss
+++ b/src/views/Auth/_auth.scss
@@ -1,5 +1,5 @@
-@import "./colors";
-@import "./breakpoints";
+@import "../../Styles/colors";
+@import "../../Styles/breakpoints";
 
 .login-view {
     margin: 0 auto;
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 20px;
     
     &__header {
         width: 500px;
