--- a/src/Styles/_buttons.scss
+++ b/src/Styles/_buttons.scss
@@ -6,6 +6,7 @@ button {
     cursor: pointer;
     background-color: $white;
     margin: 0;
+    margin-right: 10px;
     border-radius: 5px;
     border: none;
     padding: 8px 16px;
