--- a/src/views/Profile/_profile.scss
+++ b/src/views/Profile/_profile.scss
@@ -1,88 +1,136 @@
 @import "../../Styles/colors";
 @import "../../Styles/breakpoints";
 
-
 .profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+
+  &__content {
+    width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
-    height: 100%;
-    width: 100%;
+    @include breakpoint("md", "down") {
+      width: 350px;
+    }
+    @include breakpoint("sm", "down") {
+      width: 200px;
+    }
+  }
+
+  &__welcome {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
     margin-bottom: 20px;
+    @include breakpoint("md", "down") {
+      width: 350px;
+    }
+    @include breakpoint("sm", "down") {
+      width: 250px;
+    }
+  }
+  &__photo-settings {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
+    @include breakpoint("md", "down") {
+      width: 350px;
+    }
+    @include breakpoint("sm", "down") {
+      width: 250px;
+    }
+  }
+  &__image {
+    max-width: 200px;
+    max-height: 400px;
+    margin-bottom: 10px;
+    border: 10px solid $white;
+    border-radius: 10px;
+    img {
+      width: 100%;
+    }
+  }
 
-    &__welcome {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        width: 500px;
-        margin-bottom: 10px;
-        @include breakpoint ("md", "down") {
-            width: 350px;
-        }
-        @include breakpoint ("sm", "down") {
-            width: 250px;
-        }
+  &__pick-image {
+    background-color: $white;
+    width: 136px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    p {
+      color: $dark-green;
     }
-    &__photo-settings {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        width: 500px;
-        @include breakpoint ("md", "down") {
-            width: 350px;
-        }
-        @include breakpoint ("sm", "down") {
-            width: 250px;
-        }
-    }
-    &__image {
-        max-width: 200px;
-        margin-bottom: 10px;
+    &:hover {
+      p {
+        color: $white;
+      }
+      background-color: lighten($dark-green, 8%);
     }
 
-    &__pick-image {
-        background-color: $white;
-        width: 136px;
-        height: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 10px;
-        cursor: pointer;
-        border-radius: 5px;
-        border: none;
-        box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-        p {
-          color: $dark-green;  
-        }
-        &:hover {
-            p {
-                color: $white;
-            }
-            background-color: lighten($dark-green, 8%);
-        }
+    input {
+      width: 0;
+      height: 0;
+      opacity: 0;
+      position: absolute;
+    }
+  }
+
+  &__form {
+    width: 100%;
+    background-color: $light-green;
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+
+    &--item {
+        width: 100%;
+        margin-bottom: 16px;
 
         input {
-            width: 0;
-            height: 0;
-            opacity: 0;
-            position: absolute;
+            width: 100%;
+            border-radius: 5px;
+            border: solid 1px;
+            height: 2rem;
         }
     }
 }
-
-
-
+  
+  &__buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    @include breakpoint("md", "down") {
+      width: 350px;
+    }
+    @include breakpoint("sm", "down") {
+      width: 250px;
+    }
+  }
+}
 
 .profileSect {
- border: 2px solid #0C5843;
- border-radius: 10px;
- box-shadow: #0c584271 1px 1px 3px 3px;
- min-width: 25rem;
- display: flex;
- flex-direction: column;
- align-items: flex-start;
- padding-left: 1rem;
+  border: 2px solid #0c5843;
+  border-radius: 10px;
+  box-shadow: #0c584271 1px 1px 3px 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 1rem;
 }
