--- a/src/Components/Activities/_activity.scss
+++ b/src/Components/Activities/_activity.scss
@@ -32,17 +32,17 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 10px;
+        
+        @include breakpoint ("md", "down") {
+            padding: 20px;
+        }
+        @include breakpoint ("sm", "down") {
+            padding: 15px;
+        }
 
         &--item {
             width: 100%;
             margin-bottom: 16px;
-
-            input {
-                width: 100%;
-                border-radius: 5px;
-                border: solid 1px;
-                height: 2rem;
-            }
         }
     }
 
