--- a/src/Styles/_buttons.scss
+++ b/src/Styles/_buttons.scss
@@ -6,15 +6,16 @@ button {
     cursor: pointer;
     background-color: $white;
     margin: 0;
+    margin-right: 10px;
     border-radius: 5px;
     border: none;
     padding: 8px 16px;
     color: $dark-green;
     font-family: 'Saira', sans-serif;
+    font-weight: bold;
     outline: none;
     text-decoration: none;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-    
 }
 
 .login-btn, .create-btn, .forgot-btn, .go-back-btn, .cancel-btn, .edit-btn {
