--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,7 @@ body, html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-display: swap;
+  font-style: normal;
+  font-weight: 400;
   src: url("https://fonts.googleapis.com/css2?family=Saira");
 }
