--- a/src/views/Auth/_auth.scss
+++ b/src/views/Auth/_auth.scss
@@ -13,6 +13,7 @@
         width: 500px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         @include breakpoint ("md", "down") {
             width: 350px;
         }
@@ -21,7 +22,6 @@
         }
         .link {
             text-decoration: none;
-            margin-top: 12px;
         }
         .title,
         .paragraph {
@@ -29,31 +29,25 @@
         }
     }
 
-    &__form-div {
+    &__form {
         width: 500px;
         background-color: $light-green;
         border-radius: 10px;
         padding: 30px;
         display: flex;
         flex-direction: column;
+        align-items: flex-end;
         margin-bottom: 10px;
         @include breakpoint ("md", "down") {
-            width: 300px;
+            width: 350px;
+            padding: 20px;
         }
         @include breakpoint ("sm", "down") {
-            width: 200px;
+            width: 220px;
+            padding: 15px;
         }
-    }
-
-    &__form {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
         .link {
             text-decoration: none;
-            margin-top: 12px;
         }
     }
 
@@ -72,7 +66,12 @@
                 border-radius: 5px;
                 border: solid 1px;
                 height: 2rem;
+                padding: 2px;
             }
+        }
+
+        &:last-child {
+            margin: 0;
         }
 
         .paragraph {
