--- a/src/views/Profile/_profile.scss
+++ b/src/views/Profile/_profile.scss
@@ -33,7 +33,7 @@
       width: 350px;
     }
     @include breakpoint("sm", "down") {
-      width: 250px;
+      width: 230px;
     }
   }
   &__photo-settings {
@@ -45,7 +45,7 @@
       width: 350px;
     }
     @include breakpoint("sm", "down") {
-      width: 250px;
+      width: 230px;
     }
   }
   &__image {
@@ -61,8 +61,8 @@
 
   &__pick-image {
     background-color: $white;
-    width: 136px;
-    height: 50px;
+    width: 126px;
+    height: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,20 +98,28 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    @include breakpoint("md", "down") {
+      padding: 20px;
+      width: 350px;
+    }
+    @include breakpoint("sm", "down") {
+      padding: 15px;
+      width: 230px;
+    }
 
     &--item {
-        width: 100%;
-        margin-bottom: 16px;
+      width: 100%;
+      margin-bottom: 16px;
 
-        input {
-            width: 100%;
-            border-radius: 5px;
-            border: solid 1px;
-            height: 2rem;
-        }
+      input {
+        width: 100%;
+        border-radius: 5px;
+        border: solid 1px;
+        height: 2rem;
+      }
     }
-}
-  
+  }
+
   &__buttons {
     display: flex;
     justify-content: space-between;
