--- a/src/Styles/_app.scss
+++ b/src/Styles/_app.scss
@@ -6,7 +6,7 @@
 .app {
   background-color: $background;
   width: 100%;
-  min-height: 100vh !important;
+  min-height: 100% !important;
   display: flex;
   flex-direction: column;
 
