--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ body, html {
   height: 100%;
 }
 
+#root {
+  height: inherit;
+}
+
+
 @font-face {
   font-family: "Saira", sans-serif;
   -webkit-font-smoothing: antialiased;
