--- a/src/views/404/_not-found.scss
+++ b/src/views/404/_not-found.scss
@@ -4,6 +4,7 @@
 .not-found {
     height: 100%;
     margin: 0 auto;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
