--- a/src/views/HomePage/_home.scss
+++ b/src/views/HomePage/_home.scss
@@ -4,8 +4,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 40px;
     height: 100%;
+    width: 100%;
 
     &__content {
         display: flex;
