Added component and updated css

--- a/src/Components/Footer/_footer.scss
+++ b/src/Components/Footer/_footer.scss
@@ -11,7 +11,7 @@
     
     &__content {
         width: 100%;
-        margin: 0 10px;
+        margin: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
