--- a/src/Components/HomePage/_activities.scss
+++ b/src/Components/HomePage/_activities.scss
@@ -42,5 +42,8 @@
         .span {
             font-weight: normal;
         }
+        a {
+          text-decoration: none;  
+        }
     }
 }
