--- a/src/Styles/_app.scss
+++ b/src/Styles/_app.scss
@@ -33,7 +33,7 @@
     margin-top: auto;
   }
 
-  input {
+  input, select {
     width: 100%;
     border-radius: 5px;
     border: solid 1px;
@@ -44,6 +44,10 @@
     font-size: 15px;
     font-weight: bold;
     line-height: normal;
+    background-color: $white;
+  }
+  select {
+    height: 38px;
   }
 
   textarea {
