--- a/src/Components/NavBar/_nav.scss
+++ b/src/Components/NavBar/_nav.scss
@@ -52,6 +52,7 @@
       margin-right: 20px;
       background-color: darken($dark-green, 10%);
       border-radius: 20px;
+      z-index: 2;
     }
   }
 
