Changes breakponts and changed design with on all components and removed unused code

--- a/src/Components/Activities/_activity.scss
+++ b/src/Components/Activities/_activity.scss
@@ -59,7 +59,7 @@
             width: 121%;
         }
 
-        &--edit {
+        &--edit, &--handle {
             display: flex;
             @include breakpoint ("sm", "down") {
                 flex-direction: column-reverse;
