--- a/src/Components/ToggleInfo/_toggle-info.scss
+++ b/src/Components/ToggleInfo/_toggle-info.scss
@@ -12,7 +12,7 @@
     &__info-img {
         width: 50px;
         height: 50px;
-        margin-left: auto;
+        margin: 10px;
     }
     &__info-text {
         animation: toggle-info-slide-up 0.25s ease forwards;
