--- a/src/Components/YourActivities/_upcoming.scss
+++ b/src/Components/YourActivities/_upcoming.scss
@@ -16,10 +16,13 @@
         flex-direction: column;
         align-items: center;
         @include breakpoint ("md", "down") {
-            width: 300px;
+            width: 400px
         }
         @include breakpoint ("sm", "down") {
-            width: 200px;
+            width: 300px
+        }
+        @include breakpoint ("xs", "down") {
+            width: 200px
         }
     }
 
