--- a/src/Styles/_buttons.scss
+++ b/src/Styles/_buttons.scss
@@ -5,11 +5,12 @@ button {
     text-align: center;
     cursor: pointer;
     background-color: $white;
-    margin: 0;
-    margin-right: 10px;
+    margin: 0 10px 10px 0;
+    height: 47px;
+    width: 100px;
     border-radius: 5px;
+    padding: 8px;
     border: none;
-    padding: 8px 16px;
     color: $dark-green;
     font-family: 'Saira', sans-serif;
     font-weight: bold;
