--- a/src/views/Auth/_auth.scss
+++ b/src/views/Auth/_auth.scss
@@ -2,97 +2,102 @@
 @import "../../Styles/breakpoints";
 
 .login-view {
-    margin: 0 auto;
-    height: 100%;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+
+  &__content {
+    width: 500px;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    margin-bottom: 20px;
-    
-    &__header {
-        width: 500px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        @include breakpoint ("md", "down") {
-            width: 350px;
-        }
-        @include breakpoint ("sm", "down") {
-            width: 250px;
-        }
-        .link {
-            text-decoration: none;
-        }
-        .title,
-        .paragraph {
-            color: $dark-green;
-        }
+    align-items: center;
+    @include breakpoint("md", "down") {
+      width: 400px;
     }
-
-    &__form {
-        width: 500px;
-        background-color: $light-green;
-        border-radius: 10px;
-        padding: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        margin-bottom: 10px;
-        @include breakpoint ("md", "down") {
-            width: 350px;
-            padding: 20px;
-        }
-        @include breakpoint ("sm", "down") {
-            width: 220px;
-            padding: 15px;
-        }
-        .link {
-            text-decoration: none;
-        }
+    @include breakpoint("sm", "down") {
+      width: 300px;
     }
+    @include breakpoint("xs", "down") {
+      width: 200px;
+    }
+  }
 
-    &__input-form {
+  &__header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .link {
+      text-decoration: none;
+    }
+    .title,
+    .paragraph {
+      color: $dark-green;
+    }
+  }
+
+  &__form {
+    width: 100%;
+    background-color: $light-green;
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-bottom: 10px;
+    @include breakpoint("md", "down") {
+      padding: 20px;
+    }
+    @include breakpoint("sm", "down") {
+      padding: 15px;
+    }
+    .link {
+      text-decoration: none;
+    }
+  }
+
+  &__input-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 16px;
+
+    label {
+      width: 100%;
+
+      input {
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        margin-bottom: 16px;
-
-        label {
-            width: 100%;
-
-            input {
-                width: 100%;
-                border-radius: 5px;
-                border: solid 1px;
-                height: 2rem;
-                padding: 2px;
-            }
-        }
-
-        &:last-child {
-            margin: 0;
-        }
-
-        .paragraph {
-            color: $error-text;
-        }
+        border-radius: 5px;
+        border: solid 1px;
+        height: 2rem;
+        padding: 2px;
+      }
     }
-    &__buttons {
-        width: 500px;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        margin: 0;
-        @include breakpoint ("md", "down") {
-            width: 350px;
-        }
-        @include breakpoint ("sm", "down") {
-            width: 250px;
-        }
-        
-        .login-btn, .create-btn, .forgot-btn {
-            margin-left: auto;
-        }
+
+    &:last-child {
+      margin: 0;
     }
+
+    .paragraph {
+      color: $error-text;
+    }
+  }
+  &__buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0;
+
+    .login-btn,
+    .create-btn,
+    .forgot-btn {
+      margin-left: auto;
+    }
+  }
 }
