--- a/src/Components/Footer/_footer.scss
+++ b/src/Components/Footer/_footer.scss
@@ -16,8 +16,10 @@
         flex-direction: column;
         align-items: center;
 
-        h3, p {
+        h3, p, a {
             color: $white;
+            text-decoration: none;
+            display: block;
         }
     }
 }
