--- a/src/Components/NavBar/_nav.scss
+++ b/src/Components/NavBar/_nav.scss
@@ -8,6 +8,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+  margin-left: 5rem;
 
   @include breakpoint("sm", "down") {
     justify-content: flex-end;
@@ -39,7 +40,10 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-end;
+    right: 0;
+    margin-right: 20px;
+    
     @include breakpoint("sm", "down") { 
       animation: slide-down-fade-in 0.25s ease forwards;
       display: flex;
@@ -48,8 +52,7 @@
       width: 80%;
       top: 80px;
       height: 50%;
-      right: 0;
-      margin-right: 20px;
+      justify-content: space-around;
       background-color: darken($dark-green, 10%);
       border-radius: 20px;
     }
@@ -57,8 +60,10 @@
 
   &__list-item {
     list-style: none;
+    padding-right: 3rem;
     @include breakpoint("sm", "down") {
       margin-right: 20px;
+      
     }
 
     a {
