--- a/src/Components/HandleConfirm/_confirm-deletion.scss
+++ b/src/Components/HandleConfirm/_confirm-deletion.scss
@@ -4,22 +4,21 @@
 
 .confirm-deletion {
   margin-right: 10px;
+  position: relative;
   &__content {
     animation: slide-up-fade-in 0.25s ease forwards;
     margin-left: auto;
     background: $white;
     position: absolute;
     border-radius: 8px;
-    z-index: 2;
     padding: 12px;
     width: 300px;
-    top: 625px;
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
     transition: transform 0.25 ease;
     border: 1px solid #dcdcdc;
+    top: -188px;
     @include breakpoint("sm", "down") {
       width: 200px;
-      top: 529px;
     }
 
     &::after {
@@ -31,20 +30,19 @@
       border-style: solid;
       border-width: 8px 8px 0 8px;
       border-color: $white transparent transparent transparent;
-      top: 167px;
+      bottom: -16px;
       transform: translateY(-100%) translateX(-50%);
     }
     &::before {
       content: "";
       position: absolute;
-      top: 0;
       width: 0;
       height: 0;
       left: 20px;
       border-style: solid;
       border-width: 8px 8px 0 8px;
       border-color: $background transparent transparent transparent;
-      top: 167px;
+      bottom: -16px;
       transform: translateY(-100%) translateX(-50%);
       z-index: 0;
     }
