--- a/src/Components/NavBar/_nav.scss
+++ b/src/Components/NavBar/_nav.scss
@@ -8,7 +8,6 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
-  margin-left: 5rem;
 
   @include breakpoint("sm", "down") {
     justify-content: flex-end;
@@ -61,10 +60,10 @@
 
   &__list-item {
     list-style: none;
-    padding-right: 3rem;
+    padding-right: 5%;
     @include breakpoint("sm", "down") {
       margin-right: 20px;
-      
+      padding-right: 0;
     }
 
     a {
