You are now able to remove your account and changed design on all the forms so it is i bit mor contrast

--- a/src/Styles/_buttons.scss
+++ b/src/Styles/_buttons.scss
@@ -56,6 +56,13 @@ button {
         color: $text-color;
         box-shadow: none; 
     }
+
+    &--disabled {
+        cursor: auto;
+        background: #dddddd;
+        color: $text-color;
+        box-shadow: none;
+    }
 }
 
 
