--- a/src/Components/Activities/_activity.scss
+++ b/src/Components/Activities/_activity.scss
@@ -25,11 +25,13 @@
     &__form {
         width: 100%;
         background-color: $light-green;
+        border: 2px solid darken($light-green, 10px);
+        box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
         border-radius: 10px;
         padding: 30px;
         display: flex;
         flex-direction: column;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         
         @include breakpoint ("md", "down") {
             padding: 20px;
