--- a/src/Components/YourActivities/_upcoming.scss
+++ b/src/Components/YourActivities/_upcoming.scss
@@ -36,9 +36,11 @@
 
     &__item {
         width: 100%;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         display: flex;
         background-color: $light-green;
+        border: 2px solid darken($light-green, 10px);
+        box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
         border-radius: 10px;
         padding: 30px;
         flex-direction: column;
