--- a/src/views/Auth/_auth.scss
+++ b/src/views/Auth/_auth.scss
@@ -43,12 +43,14 @@
   &__form {
     width: 100%;
     background-color: $light-green;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    border: 2px solid darken($light-green, 10px);
     border-radius: 10px;
     padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     @include breakpoint("md", "down") {
       padding: 20px;
     }
