--- a/src/views/Profile/_profile.scss
+++ b/src/views/Profile/_profile.scss
@@ -82,7 +82,8 @@
   &__form {
     width: 100%;
     background-color: $light-green;
-    box-shadow: $dark-green 1px 1px 3px 3px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    border: 2px solid darken($light-green, 10px);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
