--- a/src/views/HomePage/_home.scss
+++ b/src/views/HomePage/_home.scss
@@ -20,4 +20,13 @@
             word-break: break-word;
         }
     }
+    .CookieConsent {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        #rcc-confirm-button, #rcc-decline-button {
+            margin: 0;
+            padding: 0;
+        }
+    }
 }
