Fixed edit activity

--- a/src/views/Calendar/_calendar.scss
+++ b/src/views/Calendar/_calendar.scss
@@ -59,8 +59,9 @@
     }
 
     &-toolbar-title {
-      font-size: 22px;
+      font-size: 26px;
       font-weight: bold;
+      color: $orange;
     }
 
     &-toolbar-chunk:last-child {
