--- a/src/views/HomePage/_home.scss
+++ b/src/views/HomePage/_home.scss
@@ -1,37 +1,75 @@
 @import "../../Styles/breakpoints";
+@import "../../Styles/colors";
 
 .home {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  height: 100%;
+  width: 100%;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+    @include breakpoint("lg", "down") {
+      width: 100%;
+      flex-direction: column;
+      word-break: break-word;
+    }
+  }
+  .CookieConsent {
+    position: absolute;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    margin-bottom: 40px;
-    height: 100%;
-    width: 100%;
-
+    margin: 0;
+    top: 0;
+    padding: 20px;
+    background-color: darken($dark-green, 10px);
+    width: 500px;
+    height: 300px;
+    @include breakpoint("md", "down") {
+      width: 400px;
+      height: 250px;
+    }
+    @include breakpoint("sm", "down") {
+      width: 300px;
+      height: 300px;
+    }
+    @include breakpoint("xs", "down") {
+      width: 200px;
+      height: 300px;
+    }
     &__content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 1000px;
-        @include breakpoint ("lg", "down") {
-            width: 100%;
-            flex-direction: column;
-            word-break: break-word;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      .paragraph {
+        color: $white;
+        a {
+          text-decoration: none;
+          color: $orange;
         }
+      }
+      
     }
-    .CookieConsent {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        div:last-child {
-            display: flex;
+    div:last-child {
+      display: flex;
+      justify-content: center;
+      align-items: center;   
 
-            button {
-                margin: 0;
-                padding: 0;
-            }
-        }
-        
+      #rcc-decline-button {
+        &:hover {
+          background-color: $orange;
+          color: $white;
+      }
+      }
     }
+  }
 }
