If user is removed, database is updated with an anonymus creator

--- a/src/Components/Activities/_activity.scss
+++ b/src/Components/Activities/_activity.scss
@@ -9,6 +9,10 @@
     align-items: center;
     margin-bottom: 30px;
 
+    .title--h3 {
+        color: $red;
+    }
+
     &__content {
         width: 500px;
         display: flex;
