--- a/src/Components/Footer/_footer.scss
+++ b/src/Components/Footer/_footer.scss
@@ -7,17 +7,17 @@
     justify-content: space-between;
     background-color: $dark-green;
     width: 100%;
-    height: 100px;
     
     &__content {
         width: 100%;
         margin: 10px;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: center;  
 
         h3, p, a {
             color: $white;
+            text-align: left;
             text-decoration: none;
             display: block;
         }
