--- a/src/Styles/_typography.scss
+++ b/src/Styles/_typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Saira');
+@import url('https://fonts.googleapis.com/css2?family=Saira&display=swap');
 @import "./colors";
 
 
@@ -32,7 +32,7 @@
     font-size: 16px;
     font-weight: normal;
     line-height: normal;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     margin-top: 0px;
     &--bold {
         font-weight: bold;
