--- a/src/Components/YourActivities/_upcoming.scss
+++ b/src/Components/YourActivities/_upcoming.scss
@@ -2,60 +2,81 @@
 @import "../../Styles/breakpoints";
 
 .upcoming {
-    margin: 0 auto;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  height: 100%;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    width: 1000px;
+    @include breakpoint("lg", "down") {
+      width: 100%;
+      flex-direction: column-reverse;
+      word-break: break-word;
+    }
+  }
+
+  &__old,
+  &__new {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin-bottom: 40px;
-    height: 100%;
+    width: 500px;
+    margin: 0 20px 20px;
+    @include breakpoint("md", "down") {
+      width: 400px;
+    }
+    @include breakpoint("sm", "down") {
+      width: 300px;
+    }
+    @include breakpoint("xs", "down") {
+      width: 200px;
+    }
+  }
 
-    &__content {
-        width: 500px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        @include breakpoint ("md", "down") {
-            width: 400px
-        }
-        @include breakpoint ("sm", "down") {
-            width: 300px
-        }
-        @include breakpoint ("xs", "down") {
-            width: 200px
-        }
+  &__activities {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+    @include breakpoint("md", "down") {
+      width: 400px;
+    }
+    @include breakpoint("sm", "down") {
+      width: 300px;
+    }
+    @include breakpoint("xs", "down") {
+      width: 200px;
+    }
+  }
+
+  &__item {
+    width: 90%;
+    margin-bottom: 20px;
+    display: flex;
+    background-color: $light-green;
+    border: 2px solid darken($light-green, 10px);
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    border-radius: 10px;
+    flex-direction: column;
+    padding: 20px;
+    @include breakpoint("sm", "down") {
+      padding: 15px;
     }
 
-    &__activities {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 10px;
+    &--content {
+      display: flex;
+      flex-direction: column;
     }
+  }
 
-    &__item {
-        width: 100%;
-        margin-bottom: 20px;
-        display: flex;
-        background-color: $light-green;
-        border: 2px solid darken($light-green, 10px);
-        box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-        border-radius: 10px;
-        padding: 30px;
-        flex-direction: column;
-        align-items: center;
-        @include breakpoint ("md", "down") {
-            padding: 20px;
-        }
-        @include breakpoint ("sm", "down") {
-            padding: 15px;
-        }
-        
-        &--content{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-    }
+  &__button {
+    align-self: flex-end;
+  }
 }
